--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "db:migrate": "node scripts/migrate.js",
-    "db:seed": "node scripts/seed.js",
-    "db:populate": "node scripts/populate-mock-data.js",
+    "db:migrate:mongo": "tsx scripts/migrate-json-to-db.ts",
+    "db:init:mongo": "node migrations/001_init_mongodb.js",
+    "db:validate:mongo": "tsx scripts/validate-mongo-data.ts",
     "test:webhooks": "node scripts/test-webhooks.js",
     "yahoo:sync": "node scripts/sync-yahoo.js",
     "test:yahoo": "node scripts/test-yahoo.js",
@@ -27,6 +27,7 @@
     "imap": "^0.8.19",
     "jsonwebtoken": "^9.0.2",
     "mailparser": "^3.9.1",
+    "mongodb": "^6.21.0",
     "next": "^14.0.4",
     "node-fetch": "^2.7.0",
     "nodemailer": "^6.9.7",
@@ -44,6 +45,7 @@
     "@types/react-dom": "^18.2.18",
     "eslint": "^8.56.0",
     "eslint-config-next": "^14.0.4",
+    "tsx": "^4.19.2",
     "typescript": "^5.3.3"
   }
 }
