T0011 - Cleanup: remove legacy code, dead CSS, add CI
Large cleanup pass to remove legacy runtime/code and add guardrails:

- Add CI workflow (cleanup-guardrails.yml) to run build, typecheck, unused-export and dead-nav-css scans.
- Ignore runtime uploads in .gitignore and add uploads/.gitkeep; remove tracked runtime upload images.
- Remove legacy runtime utilities and SQL path: delete lib/date-utils.ts, lib/db/index.ts, lib/db/sql-adapter.ts; add lib/db/storage-data.ts and update lib/db/mongo.ts import.
- Prune lib/constants.ts to keep only actively used values.
- Archive legacy scripts (moved scripts/* to archived/).
- Remove dead navbar CSS rules from app/page.module.css and app/inbox/page.module.css.
- Mark several scheduling-related API routes as "feature-flagged" (providers, resources, waitlist, blocked-times, appointments/recurring) and limit docs surface in app/api/docs/route.ts; adjust appointments PATCH error payload to JSON string.
- Add documentation/checklist: API_SURFACE_STATUS.md and CLEANUP_CHECKLIST.md; update README to reference new docs and checks.

Purpose: reduce repo noise, enforce checks to prevent regressions, and isolate non-core/advanced scheduling code without changing core behavior.

--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "typecheck": "tsc --noEmit",
+    "check:unused-exports": "node scripts/check-unused-exports.js",
+    "check:dead-nav-css": "node scripts/check-dead-nav-css.js",
+    "check:cleanup": "npm run build && npm run typecheck && npm run check:unused-exports && npm run check:dead-nav-css",
     "db:migrate:mongo": "tsx scripts/migrate-json-to-db.ts",
     "db:init:mongo": "node migrations/001_init_mongodb.js",
     "db:validate:mongo": "tsx scripts/validate-mongo-data.ts",
