T0016 - Calendar: provider/resource support & conflict fixes
Add provider/resource scoping and robust conflict handling across calendar APIs. Validate and normalize inputs for PATCH/POST endpoints, format conflict responses with human-friendly messages and suggestions, and ensure time ranges are validated. Introduce toDate utilities and scope filters (provider/resource) in getAvailableSlots, isSlotAvailable, getSuggestedSlots, and checkAppointmentConflict; propagate options through API routes and client. Replace ad-hoc max-id logic with getNextNumericId (atomic counter) and store created_at/updated_at as ISO strings. Add migration script to normalize blocked_times date fields and expose a npm script for it. Misc: SWR fallback for initialAppointments and README updates documenting new behaviors.

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "check:cleanup": "npm run build && npm run typecheck && npm run check:unused-exports && npm run check:dead-nav-css",
     "db:migrate:mongo": "tsx scripts/migrate-json-to-db.ts",
     "db:init:mongo": "node migrations/001_init_mongodb.js",
+    "db:normalize:blocked-times": "node scripts/migrations/normalize-blocked-times-dates.js",
     "db:validate:mongo": "tsx scripts/validate-mongo-data.ts",
     "test:webhooks": "node scripts/test-webhooks.js",
     "yahoo:sync": "node scripts/sync-yahoo.js",
