T0022 - PHASE 1.1 - Add admin UI, auth flows and APIs
Introduce a complete admin surface and supporting server endpoints: admin layout, dashboard, tenants/users listing and detail pages, tenant creation form, and an audit logs page. Add client-side components for managing tenants and users (with actions like soft-delete, restore, resend invite, add user) and auth UI (login form, invite accept flow). Implement corresponding API routes for admin functionality (audit, stats, tenants/users management, invite handling, restore/resend), plus invite/auth server routes and numerous helper libraries (lib/auth, lib/invite, lib/audit, auth-helpers, error handling, email helpers, and DB utilities). Also add AppChrome/AuthSessionProvider components, types for next-auth, and a script to create a super-admin. These changes enable super-admin management and invite-driven onboarding end-to-end.

--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "db:backfill:clients-deleted-at": "node scripts/migrations/backfill-clients-deleted-at.js",
     "db:cleanup:clients-legacy-fields": "node scripts/migrations/cleanup-clients-legacy-fields.js",
     "db:validate:mongo": "tsx scripts/validate-mongo-data.ts",
+    "admin:create": "tsx scripts/create-super-admin.ts",
     "test:webhooks": "node scripts/test-webhooks.js",
     "yahoo:sync": "node scripts/sync-yahoo.js",
     "test:yahoo": "node scripts/test-yahoo.js",
     "yahoo:debug": "node scripts/test-yahoo-debug.js"
   },
   "dependencies": {
+    "@auth/mongodb-adapter": "^3.11.1",
     "@types/dompurify": "^3.2.0",
     "@types/imap": "^0.8.43",
     "bcryptjs": "^2.4.3",
@@ -36,11 +38,13 @@
     "mailparser": "^3.9.1",
     "mongodb": "^6.21.0",
     "next": "^14.0.4",
+    "next-auth": "^5.0.0-beta.30",
     "node-fetch": "^2.7.0",
-    "nodemailer": "^6.9.7",
+    "nodemailer": "^7.0.13",
     "openai": "^4.20.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "resend": "^6.9.2",
     "swr": "^2.4.0",
     "zod": "^3.22.4"
   },
