T0026 - Phase 2 - Enforce tenant scoping and add team APIs
Add tenant_id propagation and owner role checks across APIs and server libs; implement Phase 2 multi-tenancy and team management. Updated many route handlers to read tenantId from auth and include tenant_id filters for appointments, calendar slots, blocked-times, clients (and nested files/notes/history/activities/export), conversations, messages, services, tasks, reminders, providers, resources, waitlist, dashboard queries, Yahoo/webhook paths, and related lib helpers. Added team endpoints (invite, list, member remove) and migration/index tooling: new scripts (migrate-add-tenant-id.ts, create-tenant-indexes.ts), package.json db scripts, and updated migrations/001_init_mongodb.js to use tenant-first indexes and include missing collections. Applied post-review fixes (invite acceptance after removal, seat allocation guard), legacy index cleanup, and added smoke tests for tenant isolation and role access. Verification: typecheck/build passed, DB migration and index creation validated, and smoke tests passed.

--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "check:dead-nav-css": "node scripts/check-dead-nav-css.js",
     "check:cleanup": "npm run build && npm run typecheck && npm run check:unused-exports && npm run check:dead-nav-css",
     "db:migrate:mongo": "tsx scripts/migrate-json-to-db.ts",
+    "db:migrate:tenant": "tsx scripts/migrate-add-tenant-id.ts",
     "db:init:mongo": "node migrations/001_init_mongodb.js",
+    "db:indexes": "tsx scripts/create-tenant-indexes.ts",
     "db:normalize:blocked-times": "node scripts/migrations/normalize-blocked-times-dates.js",
     "db:backfill:clients-deleted-at": "node scripts/migrations/backfill-clients-deleted-at.js",
     "db:cleanup:clients-legacy-fields": "node scripts/migrations/cleanup-clients-legacy-fields.js",
