T0026 - PHASE 3.4 -  R2 storage, Redis cache, bench & cron
Implements Phase 3 infrastructure changes: adds a Cloudflare R2-backed storage abstraction and migrates client/attachment file flows to use signed URLs (lib/storage.ts + migrate script). Introduces Redis/Upstash helpers, distributed rate limiting and read caching with centralized cache keys and invalidation (lib/redis.ts, lib/cache-keys.ts), and wires caching/invalidation into appointments, clients, providers, services, resources and dashboard endpoints. Adds a benchmark framework and runner (scripts/benchmark/), a benchmark-only rate-limit bypass (middleware + headers) and run/report/GUI scripts; captures a baseline run (20260220-085452) and documents runbook. Implements Yahoo email-sync background job runner, cron fan-out and worker endpoints with QStash optionality (lib/yahoo-sync-runner.ts, lib/email-sync-queue.ts, lib/cron-auth.ts, /api/cron/email-sync, /api/jobs/email-sync/yahoo), plus vercel cron config. Misc: removes local-disk fallbacks from serverless routes, updates API routes to use storage and caching, updates types, adds benchmark reports, and updates status/task docs. Validation notes: typecheck/build completed for most changes; file migration reported migrated=11, skippedNoFile=5, failed=0. Some local build/typecheck caveats noted (Next build artifacts/runtime warnings) that require stopping local dev server to fully regenerate artifacts.

--- a/package.json
+++ b/package.json
@@ -14,12 +14,17 @@
     "check:cleanup": "npm run build && npm run typecheck && npm run check:unused-exports && npm run check:dead-nav-css",
     "db:migrate:mongo": "tsx scripts/migrate-json-to-db.ts",
     "db:migrate:tenant": "tsx scripts/migrate-add-tenant-id.ts",
+    "db:migrate:files:r2": "tsx scripts/migrate-files-to-cloud.ts",
     "db:init:mongo": "node migrations/001_init_mongodb.js",
     "db:indexes": "tsx scripts/create-tenant-indexes.ts",
     "db:normalize:blocked-times": "node scripts/migrations/normalize-blocked-times-dates.js",
     "db:backfill:clients-deleted-at": "node scripts/migrations/backfill-clients-deleted-at.js",
     "db:cleanup:clients-legacy-fields": "node scripts/migrations/cleanup-clients-legacy-fields.js",
     "db:validate:mongo": "tsx scripts/validate-mongo-data.ts",
+    "bench:baseline": "tsx scripts/benchmark/run.ts --config scripts/benchmark/config.baseline.json",
+    "bench:compare": "tsx scripts/benchmark/run.ts --config scripts/benchmark/config.baseline.json",
+    "bench:report": "tsx scripts/benchmark/report.ts",
+    "bench:gui": "python scripts/benchmark/benchmark_gui.py",
     "admin:create": "tsx scripts/create-super-admin.ts",
     "test:webhooks": "node scripts/test-webhooks.js",
     "yahoo:sync": "node scripts/sync-yahoo.js",
@@ -28,8 +33,13 @@
   },
   "dependencies": {
     "@auth/mongodb-adapter": "^3.11.1",
+    "@aws-sdk/client-s3": "^3.632.0",
+    "@aws-sdk/s3-request-presigner": "^3.632.0",
     "@types/dompurify": "^3.2.0",
     "@types/imap": "^0.8.43",
+    "@upstash/qstash": "^2.9.0",
+    "@upstash/ratelimit": "^2.0.8",
+    "@upstash/redis": "^1.36.2",
     "bcryptjs": "^2.4.3",
     "date-fns": "^2.30.0",
     "dompurify": "^3.3.1",
