--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,6 +33,7 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
+    ".next/types/**/*.ts",
     ".next-build/types/**/*.ts"
   ],
   "exclude": [
